[package]
name = "quiche_tutorial"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
env_logger = "0.10.0"
log = { version = "0.4.20", features = ["std"] }
mio = { version = "0.8.8" , features = ["net", "os-poll"]}
quiche = "0.18.0"
ring = "0.17.4"
url = "1"
